--- a/src/app/global_comman/profile/profile.component.css
+++ b/src/app/global_comman/profile/profile.component.css
@@ -1,12 +1,16 @@
 :host ::ng-deep .background {
-    /* background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100%;
-    min-height: 100vh;*/
-    display: flex;
-    justify-content: space-around;
-    font-family: 'MedievalSharp', sans-serif;
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.3), /* Semi-transparent white */
+    rgba(255, 255, 255, 0.76)
+  ), url('/assets/background-img/background01.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100vh; 
+  display: flex;
+  justify-content: space-around;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
 .avatar-container {
@@ -86,15 +90,6 @@
   }
 
   .modal {
-    /* display: none; 
-    position: fixed;
-    z-index: 1000; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);  */
     display: none; /* Hidden by default */
     position: fixed;
     z-index: 1;
@@ -216,7 +211,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .profile-details, .mood-history {
@@ -306,16 +301,48 @@
 }
 
 .mood-list {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+    height: 100%;
+    width: 100%;*/
+    display: flex;
+    flex-wrap: wrap; /* Ensures all items stay in one row */
+    gap: 10px; /* Adjust gap between mood items */
+    justify-content: center; /* Centers the mood items in the row */
+    align-items: center; /* Aligns the mood items vertically in the center */
+    /* overflow-x: auto;  */
+    /* padding: 10px; */
+    height: 100%;
+    width: 100%;
 }
+ 
+/* .mood-list div {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+} */
 
 .mood-img {
     height: 50px;
     border-radius: 10px;
     transition: transform 0.2s ease;
+}
+
+.no-moods{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+}
+
+.mood-list p {
+  font-size: 0.9rem; /* Adjusts the font size for the date */
+  margin: 0;
+  text-align: center;
 }
 
 .show-more {
@@ -409,8 +436,8 @@ img.locked {
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     margin-top: 15px;
-    height: 300px; /* Fixed height */
-    overflow-y: auto; /* Allow scrolling if content overflows */
+    height: 350px; /* Fixed height */
+    overflow-y: auto; /*Allow scrolling if content overflows */
 }
 
 .tab-pane {
